--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Suggests:
     spelling,
     testthat (>= 3.0.0)
 Remotes:
-    j-idea/daedalus,
+    jameel-institute/daedalus,
     reside-ic/porcelain
 Config/testthat/edition: 3
 Encoding: UTF-8
