--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -45,7 +45,8 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
-
+      - name: Run redis
+        run: ./scripts/redis start
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
