--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -46,6 +46,7 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
       - name: Run redis
+        if: ${{ matrix.config.os != 'macos-latest' }}
         run: ./scripts/redis start
       - uses: r-lib/actions/check-r-package@v2
         with:
