jidea-74 Get model result via rrq (#8)
* added rrq and Queue class

* run in docker

* endpoints all work in docker

* include run_id in route, not as qs param

* e2e test

* tests

* queue tests

* model_run test

* run redis on CI

* fix redis run

* lint

* skip redis tests on macos

* update word list

* fix doc warning

* fix lintr config

* cleanup docker containers

* add missing docs param

* more docs

* a couple more skip if no redis

* force container removal on clear

* updates for review

* fix backwards logic

* add log to test script on fail

* remove volume prune

* configure queue separately from api initialisation

* suffix uid for test queue ids, and remove configure_queue param

* add test for api run return type

* rename json util

* tests and lint

* add UUID to Suggests

* be more explicit about unboxing

* do not serialise in model_run

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -28,7 +28,8 @@ jobs:
         with:
           extra-packages: any::covr, any::xml2
           needs: coverage
-
+      - name: Run redis
+        run: ./scripts/redis start
       - name: Test coverage
         run: |
           cov <- covr::package_coverage(
