--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,8 +20,6 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macos-latest,   r: 'release'}
-          - {os: windows-latest, r: 'release'}
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
           - {os: ubuntu-latest,   r: 'oldrel-1'}
@@ -45,7 +43,8 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
-
+      - name: Run redis
+        run: ./scripts/redis start
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
