--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,9 @@
 # TODO: update version
-FROM rocker/r-ver:4.4.1
+FROM rocker/r-ver:4.1
 
 RUN apt-get update &&  apt-get install -y --no-install-recommends \
         libcurl4-openssl-dev \
+        libhiredis-dev \
         libssl-dev \
         libv8-dev \
         zlib1g-dev \
@@ -38,7 +39,12 @@ EXPOSE 8001
 
 COPY . /src
 RUN R CMD INSTALL --install-tests /src && \
-        cp /src/docker/daedalus_api /usr/local/bin && \
+        cp /src/docker/daedalus.api /usr/local/bin && \
+        cp /src/docker/daedalus.api.worker /usr/local/bin && \
+        cp /src/docker/daedalus.api.configure /usr/local/bin && \
         rm -rf /src
 
-ENTRYPOINT ["/usr/local/bin/daedalus_api"]
+# ENTRYPOINT for api is "/usr/local/bin/daedalus.api"
+# ENTRYPOINT for worker is "/usr/local/bin/daedalus.api.worker"
+# Set env vars DAEDALUS_QUEUE_ID and REDIS_CONTAINER_NAME for both
+# A persistent volume should be mounted at /daedalus/results and (for the worker) at logs/worker
