--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ License: MIT + file LICENSE
 URL: https://github.com/jameel-institute/daedalus.api
 BugReports: https://github.com/jameel-institute/daedalus.api/issues
 Imports: 
-    daedalus (>= 0.0.8),
+    daedalus (>= 0.0.15),
     docopt,
     dplyr,
     jsonlite,
@@ -22,6 +22,7 @@ Imports:
     R6,
     redux,
     rrq,
+    stringr,
     tidyr
 Suggests: 
     httr,
