--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: daedalus.api
 Title: Serve the 'daedalus' model via an API
-Version: 0.0.3
+Version: 0.0.4
 Authors@R: c(
     person("Pratik", "Gupte", , "p.gupte24@imperial.ac.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-5294-7819")),
@@ -12,7 +12,7 @@ License: MIT + file LICENSE
 URL: https://github.com/jameel-institute/daedalus.api
 BugReports: https://github.com/jameel-institute/daedalus.api/issues
 Imports: 
-    daedalus (>= 0.0.8),
+    daedalus (>= 0.0.17),
     docopt,
     dplyr,
     jsonlite,
@@ -22,6 +22,7 @@ Imports:
     R6,
     redux,
     rrq,
+    stringr,
     tidyr
 Suggests: 
     httr,
