jidea-175 update version, and use latest daedalus version (#32)
* update version, and use latest daedalus version

* update package version - use 0.1.0

* docker build plain logs

--- a/docker/build
+++ b/docker/build
@@ -3,7 +3,7 @@ set -ex
 HERE=$(dirname $0)
 . $HERE/common
 
-docker build --pull \
+docker build --pull --progress=plain \
        --tag $TAG_SHA \
        --progress=plain \
        -f docker/Dockerfile \
