Use new rrq offload configuration API.
rrq 0.7.20 has changed a bit how the offload gets configured. Instead of
being a global property that must be configured ahead of time, the path
to the offload directory is now set per-controller/worker. The offload
threshold size is similar, although for workers it is set through the
worker configuration.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Imports:
     porcelain,
     R6,
     redux,
-    rrq,
+    rrq (>= 0.7.20),
     stringr,
     tidyr
 Suggests: 
@@ -33,7 +33,7 @@ Suggests:
     withr
 Remotes:
     jameel-institute/daedalus,
-    mrc-ide/rrq,
+    mrc-ide/rrq@mrc-5889,
     reside-ic/porcelain
 Config/testthat/edition: 3
 Encoding: UTF-8
