--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,7 @@ Suggests:
     withr
 Remotes:
     jameel-institute/daedalus,
-    mrc-ide/rrq@mrc-5889,
+    mrc-ide/rrq,
     reside-ic/porcelain
 Config/testthat/edition: 3
 Encoding: UTF-8
