--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,12 @@ Version: 0.1.3
 Authors@R: c(
     person("Pratik", "Gupte", , "p.gupte24@imperial.ac.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-5294-7819")),
-    person("Imperial College of Science, Technology and Medicine", role = "cph")
+    person("Emma", "Russell", role = "aut"),
+    person("Rich", "FitzJohn", role = "aut",
+           comment = c(ORCID = "0000-0001-8888-3837")),
+    person("David", "Mears", role = "aut"),
+    person("Abdul Latif Jameel Institute for Disease and Emergency Analytics", role = "fnd"),
+    person("Imperial College of Science, Technology and Medicine", role = c("cph", "fnd"))
   )
 Description: API server for the 'daedalus' model, using 'porcelain' and
     'plumber'.
@@ -13,11 +18,11 @@ URL: https://github.com/jameel-institute/daedalus.api
 BugReports: https://github.com/jameel-institute/daedalus.api/issues
 Imports: 
     daedalus (>= 0.1.0),
+    daedalus.data,
     docopt,
     dplyr,
     jsonlite,
     lgr,
-    openssl,
     porcelain,
     R6,
     redux,
@@ -33,6 +38,7 @@ Suggests:
     withr
 Remotes:
     jameel-institute/daedalus,
+    jameel-institute/daedalus.data,
     mrc-ide/rrq,
     reside-ic/porcelain
 Config/testthat/edition: 3
