--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ Remotes:
     jameel-institute/daedalus.data,
     mrc-ide/rrq,
     reside-ic/porcelain
+Config/Needs/website: jameel-institute/jameelinst.rpkg.theme
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-GB
